add core CUR decomposition algorithm
Changelog:
* add core CUR decomposition
* **drastic** changes to README
* add probabilistic row and column selection based on frobenius norm

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.pickle
 
 temp
+test.py
 
 # Created by https://www.gitignore.io/api/linux,python,windows,jupyternotebooks,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=linux,python,windows,jupyternotebooks,visualstudiocode
